--- a/styles/base.css
+++ b/styles/base.css
@@ -3,27 +3,31 @@
     padding: 0;
 }
 
-body {
-    width: 100%;
-}
-
 header {
     width: 100%;
     height: auto;
     text-align: center;
     float: left;
+    justify-content: t;
     background-color: rgb(41, 71, 111);
-    padding: 10px;
     color: rgb(255, 255, 255);
 }
 
 header img {
-    margin-right: 10px;
+    margin: 10px;
+    vertical-align: bottom;
+    display: inline-block;
+}
+
+header h1 {
+    margin: 25px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 nav {
     width: 100%;
-    height: 25%;
+    height: auto;
     display: grid;
     background-color: black;
     justify-items: center;
@@ -48,21 +52,22 @@ a::selection {
 }
 
 main {
-    width: 90%;
-    margin: auto;
+    width: 100%;
     margin-bottom: 30px;
     color: black;
     text-align: center;
     display: grid;
-    padding-top: 30px;
+}
+
+main h2 {
+    margin-top: 20px;
 }
 
 .card {
     display: grid;
-    margin-top: 30px;
+    margin: 30px 30px 0px 30px;
     outline: 3px solid lightgrey;
     border-radius: 5px;
-
 }
 
 .card h3 {
