--- a/lesson02/styles/base.css
+++ b/lesson02/styles/base.css
@@ -4,12 +4,14 @@
 }
 
 header {
-    width: 100%;
+    width: 100vw;
     height: auto;
     text-align: center;
     float: left;
     background-color: rgb(41, 71, 111);
     color: rgb(255, 255, 255);
+    padding: 10px;
+    margin-bottom: 30px;
 }
 
 header img {
@@ -24,24 +26,6 @@ header h1 {
     vertical-align: middle;
 }
 
-nav {
-    width: 100%;
-    height: auto;
-    display: flex;
-    background-color: black;
-    align-items: center;
-    flex-direction: column;
-}
-
-nav a {
-    text-decoration: none;
-    padding: 10px 0px 10px 0px;
-    width: 6em;
-    font-size: larger;
-    text-align: center;
-    color: rgb(255, 255, 255)
-}
-
 a {
     color: blue;
 }
@@ -52,11 +36,12 @@ a::selection {
 }
 
 main {
-    width: 100%;
+    width: 99%;
     margin-bottom: 30px;
     color: black;
     text-align: center;
     display: grid;
+    padding: 0px 10px;
 }
 
 main h2 {
@@ -65,9 +50,20 @@ main h2 {
 
 .card {
     display: grid;
-    margin: 30px 30px 0px 30px;
+    grid-gap: 5px;
     outline: 3px solid lightgrey;
     border-radius: 5px;
+    justify-content: space-evenly;
+    align-items: start;
+    margin: 10px;
+}
+
+.card img {
+    width: 75vw;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card h3 {
@@ -96,7 +92,8 @@ footer {
     align-items: center;
     text-align: center;
     background-color: rgb(41, 71, 111);
-    color: rgb(255, 255, 255)
+    color: rgb(255, 255, 255);
+    padding: 10px;
 }
 
 #lastModified {
