--- a/styles/base.css
+++ b/styles/base.css
@@ -52,11 +52,12 @@ a::selection {
 }
 
 main {
-    width: 100%;
-    margin-bottom: 30px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
     color: black;
     text-align: center;
-    display: grid;
+    padding: 10px 10px;
 }
 
 main h2 {
@@ -65,15 +66,19 @@ main h2 {
 
 .card {
     display: grid;
-    margin: 30px 30px 0px 30px;
+    grid-template-columns: 1fr;
+    width: 100%;
     outline: 3px solid lightgrey;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 
 .card h3 {
     background-color: rgb(41, 71, 111);
     color: rgb(255, 255, 255);
-    padding: 15px 0;
+    padding: 15px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .card p {
