--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 700px) {
     header {
-        background-color: darkmagenta;
+        background-color: rgb(41, 71, 111);
         color: white;
     }
 
