--- a/styles/larger.css
+++ b/styles/larger.css
@@ -34,4 +34,27 @@
         box-sizing: border-box;
         align-items: start;
     }
+
+    #menu {
+        display: none;
+        /* hide hamburger button */
+    }
+
+
+    .navigation {
+        flex-direction: row;
+    }
+
+    .navigation a {
+        display: block;
+        flex: 1 1 100%;
+    }
+
+    .stuff {
+        margin: 1rem auto;
+    }
+
+    .map {
+        grid-column: 1 / span 2;
+    }
 }
