--- a/styles/base.css
+++ b/styles/base.css
@@ -159,7 +159,7 @@ footer {
 }
 
 .stuff {
-    margin: 0.5m;
+    margin: 0.5em;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #bed;
     max-width: 580px;
