--- a/styles/base.css
+++ b/styles/base.css
@@ -112,7 +112,7 @@ footer {
     font-size: 1.5rem;
     border: 0;
     background: none;
-    color: #000;
+    color: #fff;
     position: absolute;
     top: 0;
     right: 0;
