--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.6;
 }
 
@@ -14,7 +14,8 @@ body {
 header {
     text-align: center;
     padding: 10px;
-    background-color: #f4f4f4;
+    background-color: #003366;
+    color: whitesmoke;
 }
 
 header h1 {
@@ -48,8 +49,8 @@ main .button {
 
 main .button a {
     padding: 10px 20px;
-    background-color: #333;
-    color: white;
+    background-color: #ffcc00;
+    color: #003366;
     text-decoration: none;
     border-radius: 5px;
 }
@@ -58,23 +59,23 @@ main .button a {
 section.card {
     padding: 20px;
     margin: 20px 0;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
+    background-color: #ffcc00;
+    border: 1px solid #003366;
 }
 
 /* Footer */
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #333;
-    color: white;
+    background-color: #003366;
+    color: whitesmoke;
 }
 
 #menu {
     font-size: 1.5rem;
     border: 0;
     background: none;
-    color: #000;
+    color: #ffcc00;
     position: absolute;
     top: 0;
     right: 0;
@@ -105,7 +106,7 @@ footer {
 }
 
 .navigation a:hover {
-    background-color: #bbb;
+    background-color: #ffcc00;
     color: #333;
     font-weight: 700;
 }
