--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -6,7 +6,6 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
     line-height: 1.6;
 }
 
@@ -53,6 +52,10 @@ main .button a {
     color: #003366;
     text-decoration: none;
     border-radius: 5px;
+}
+
+main .button a:hover {
+    background-color: orange;
 }
 
 /* Cards */
