--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -18,7 +18,8 @@ header {
 }
 
 header h1 {
-    margin-bottom: 10px;
+    margin: 10px;
+    padding: 1em;
 }
 
 nav a {
@@ -79,13 +80,13 @@ footer {
 }
 
 #menu {
-    font-size: 1.5rem;
+    font-size: 2rem;
     border: 0;
     background: none;
     color: #ffcc00;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 0.5em;
+    right: 0.5em;
 }
 
 #menu::before {
