--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 header {
@@ -38,6 +39,7 @@ nav {
 }
 
 nav a {
+    width: 100%;
     text-decoration: none;
     padding: 10px 0px 10px 0px;
     width: 6em;
@@ -57,6 +59,7 @@ a::selection {
 
 main {
     display: grid;
+    width: 100%;
     grid-template-columns: 1fr;
     gap: 10px;
     color: black;
