created and added html and css to tablebuild files

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -47,6 +47,12 @@
         justify-items: center;
         align-content: center;
         width: 95%;
+        transition: transform 0.3s ease-in-out;
         /* Three columns for images */
+    }
+
+    #gallery img:hover {
+        transform: scale(1.05);
+        /* Confirm scaling effect */
     }
 }
