--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -51,4 +51,8 @@
         width: 95%;
     }
 
+    .main {
+        grid-template-columns: 2fr 1fr;
+        /* Two columns: Form takes more space */
+    }
 }
