--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -51,6 +51,29 @@
 
     .main {
         grid-template-columns: 2fr 1fr;
-        /* Two columns: Form takes more space */
+    }
+
+    #members-container.grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+    }
+
+    #members-container.list {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    #members-container.list .member-card {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px 30px;
+        text-align: left;
+    }
+
+    #members-container.list .member-card img {
+        margin-right: 20px;
     }
 }
