--- a/scoots/styles/larger.css
+++ b/scoots/styles/larger.css
@@ -81,4 +81,10 @@
     .weather-details p {
         font-size: 1.2rem;
     }
+
+    .footer-container {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0 2rem;
+    }
 }
